# FlyStability

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yaml
bash/: train_flybrain_rnn.sh  train_flybrain_rnn_pop.sh  train_rd_rnn.sh  train_rd_rnn_fixed_param.sh  train_rd_rnn_nersc.sh  train_rd_rnn_vary_net_size.sh  train_rd_rnn_vary_number_lyapunov.sh
flybrain/: connectome.py  functional.py  lyapunov.py  model.py  qr.py  training.py  utils.py
flybrain/workflows/: transition_2_chaos.py  workflow_RD_RNN.py  workflow_RD_RNN_fixed_param.py  workflow_flybrain_RNN.py  workflow_flybrain_RNN_cell.py  workflow_lyapunov_benchmark.py  workflow_lyapunov_convergence.py  workflow_spectrum_characterisation.py  workflow_trans2chaos.py
notebooks/: FINAL_0_spectrum_chart.ipynb  FINAL_1.1_rd_model_weights.ipynb  FINAL_1.2_rd_model_activation.ipynb  FINAL_1.3_rd_model_fixed_paramer.ipynb  FINAL_2_FlyBrain.ipynb
tests/: test_functional.py  test_lyapunov.py  test_model.py  test_qr.py
